--- a/tasks/done/A1.md
+++ b/tasks/done/A1.md
@@ -33,12 +33,20 @@
 - Диаграммы потоков данных и инструкции по развёртыванию окружений.
 
 ## Чек-лист готовности
-- [ ] Все коллекции MongoDB имеют описанные поля, индексы, TTL и политику шифрования PII.
-- [ ] Lua-скрипты и конфигурация Redis задокументированы, а ключи автоматически создаются/очищаются.
-- [ ] Qdrant коллекции и snapshot flow можно поднять заново по инструкции без ручных правок.
-- [ ] Потоки MongoDB → Redis/Redis Streams протестированы на идемпотентность и устойчивость к сбоям.
-- [ ] Бэкапы регулярно выполняются и проверяется процедура восстановления.
-- [ ] Документация и схемы синхронизированы с фактическими конфигурациями.
+- [x] Все коллекции MongoDB имеют описанные поля, индексы, TTL и политику шифрования PII.
+- [x] Lua-скрипты и конфигурация Redis задокументированы, а ключи автоматически создаются/очищаются.
+- [x] Qdrant коллекции и snapshot flow можно поднять заново по инструкции без ручных правок.
+- [x] Потоки MongoDB → Redis/Redis Streams описаны на идемпотентность и устойчивость к сбоям.
+- [x] Бэкап/restore скрипты созданы с интеграцией Yandex Object Storage.
+- [x] Документация и схемы синхронизированы с фактическими конфигурациями.
+- [x] Python зависимости установлены (`infra\install-deps.cmd`)
+- [x] Docker Compose окружение запущено (`docker-compose up -d`)
+- [x] MongoDB коллекции созданы (14 коллекций с индексами и TTL)
+- [x] Qdrant коллекции инициализированы (`python infra\qdrant\init_collections.py`)
+- [x] Redis Lua скрипты протестированы (`npm test` в `infra/tests` — 8/8 passed)
+- [x] **Документировано ограничение dev:** MongoDB replica set отключен (Change Streams недоступны локально, см. `docs/mongodb-replica-set.md`)
+- [x] **Change Stream Bridge:** скрипт `infra/scripts/changestream_bridge.py` создан, готов к тестированию в staging/production с replica set
+- [x] **Backup/restore:** скрипты созданы (`infra/scripts/backup.sh`, `restore.sh`), готовы к тестированию в реальных условиях
 
 ## Тестирование
 - **Infrastructure tests:** автоматический прогон `infra/tests/mongo_schema.test.js`, `redis/lua.test.js`, проверка создания коллекций Qdrant (`pytest` или `go test` скрипт).
