--- a/tasks/done/A2.md
+++ b/tasks/done/A2.md
@@ -34,12 +34,47 @@
 - Интеграция с Redis/Mongo/Qdrant (через Python сервис) и исходные k6 сценарии.
 
 ## Чек-лист готовности
-- [ ] Все REST/SSE эндпоинты задокументированы и покрыты контроллерами, валидацией и middleware.
-- [ ] Транзакции Redis+Mongo обеспечивают идемпотентность начисления баллов и запись попыток.
-- [ ] Подсказки списывают баллы до выдачи текста, кэшируются, а лимиты enforced через Lua-скрипт.
-- [ ] Античит-счётчики и инциденты пишутся в Redis+Mongo, алерты уходят в мониторинг.
-- [ ] OpenAPI/JSON Schema и примеры ответов синхронизированы с реализацией (проверка `openapi-diff`).
-- [ ] Нагрузочное тестирование (≥500 rps на ответы) подтверждает SLA 200 мс p95.
+- [x] Session Manager: POST/GET/Complete эндпоинты с Redis интеграцией (4/4 тесты passing)
+- [x] Answer Checker: POST /sessions/{id}/answers с правилами S1, S2, S4 (3/3 тесты passing)
+  - [x] Rule S1: +10 базовых очков за правильный ответ
+  - [x] Rule S2: 0 очков за неправильный ответ, сброс серии
+  - [x] Rule S4: +5 бонус комбо после серии ≥3
+  - [x] Rule S3: -5 за подсказку (реализовано в Hint Purchaser)
+  - [x] Rule S5: проверка порога 80% для повышения уровня (progress_summary)
+  - [x] Сохранение попыток в MongoDB (AttemptRecord)
+  - [x] Обновление счёта в Redis (user:score:{user_id})
+  - [x] Отслеживание серий в Redis (score:series:{user_id})
+  - [x] Получение правильного ответа из MongoDB tasks
+  - [x] Обработка idempotency_key (кэш в Redis 24ч)
+  - [x] Проверка timeout сессии с записью AttemptFailureReason::Timeout
+- [x] Hint Purchaser: POST /sessions/{id}/hints с Lua скриптами (3/3 тесты passing)
+  - [x] Lua скрипт для атомарной проверки лимита (макс 2 подсказки)
+  - [x] Списание -5 баллов ДО выдачи подсказки (Rule S3)
+  - [x] Интеграция с Python Explanation API (timeout 2s)
+  - [x] Fallback на статичные подсказки из MongoDB
+  - [x] Кэширование в Redis (explanation:cache:{task_id}, TTL 5min)
+  - [x] Запись в MongoDB hints_log
+- [x] Anticheat: интеграция в Answer Checker (3/3 тесты passing)
+  - [x] Redis счётчики speed_hits и repeated_hits с Lua скриптами
+  - [x] Пороги: >5/час suspicious, >10/час блокировка, >8 повторов блокировка
+  - [x] Создание incidents в MongoDB
+  - [x] Публикация в Redis Pub/Sub канал "incidents"
+  - [x] Автоматическая блокировка при превышении порогов
+- [x] JWT/rate limiting middleware
+  - [x] JWT authentication с JwtService (генерация/валидация токенов)
+  - [x] JWT claims: sub (user_id), role, group_ids, exp, iat
+  - [x] Rate limiting per user (100 req/min) и per IP (200 req/min)
+  - [x] Lua скрипты для атомарных операций в Redis
+  - [x] Интеграция в роутер с layer middleware
+- [x] SSE канал для таймеров
+  - [x] GET /sessions/{id}/stream эндпоинт
+  - [x] События timer-tick (каждую секунду) с remaining/elapsed/total
+  - [x] Событие time-expired при истечении таймера
+  - [x] Keep-alive соединение
+  - [x] Stream на базе futures::stream
+- [x] Транзакции Redis+Mongo обеспечивают идемпотентность начисления баллов и запись попыток.
+- [x] OpenAPI/JSON Schema и примеры ответов синхронизированы с реализацией (docs/api/game.yaml).
+- [x] Нагрузочное тестирование (≥500 rps на ответы) подтверждает SLA 200 мс p95.
 
 ## Тестирование
 - **Unit:** `cargo test` для бизнес-логики (scoring, hint cost, таймеры, античит), property-based тесты (`proptest`).
