--- a/tasks/done/A0.md
+++ b/tasks/done/A0.md
@@ -1,3 +1,4 @@
+NOTE (2025-12-22): рабочий репозиторий включает каталоги frontend/, backend/rust-api/ и backend/python-generator/. Husky/lint-staged обслуживает фронтенд, .githooks запускают Rust и Python проверки, а docker-compose поднимает MongoDB, Redis, Qdrant, Rust API и Python Explanation API. Описание ниже оставлено для истории, актуальное состояние отражено в docs/dev-setup.md.
 # A0 — Настройка окружения разработки и pre-commit хуков
 
 ## Контекст
@@ -328,7 +329,7 @@ fi
 
 # Python
 if ! command -v python3 &> /dev/null; then
-    echo "[ERROR] Python 3.12+ not found"
+    echo "[ERROR] Python 3.14+ not found"
     exit 1
 fi
 
