--- a/tasks/done/A2.md
+++ b/tasks/done/A2.md
@@ -1,3 +1,4 @@
+NOTE (2025-12-22): рабочий репозиторий включает каталоги frontend/, backend/rust-api/ и backend/python-generator/. Husky/lint-staged обслуживает фронтенд, .githooks запускают Rust и Python проверки, а docker-compose поднимает MongoDB, Redis, Qdrant, Rust API и Python Explanation API. Описание ниже оставлено для истории, актуальное состояние отражено в docs/dev-setup.md.
 # A2 — Бизнес-ядро на Rust: сессии, ответы, подсказки
 
 ## Контекст
