feat: replica set, health checks и мониторинг для staging

--- a/tasks/TD-01.md
+++ b/tasks/TD-01.md
@@ -1,5 +1,39 @@
 # TD-01 — Production Readiness и доработка A0-A2
 
+## Статус выполнения (22.12.2024)
+
+### Выполнено (P0 - критично для staging)
+- ✅ **MongoDB Replica Set** - 3 ноды работают (PRIMARY + 2 SECONDARY)
+  - Автоинициализация через `infra/mongo-init/03_replica_set.js`
+  - Change Streams проверены и работают
+  - URI обновлен в `.env.example` и `docker-compose.yml`
+
+- ✅ **Health Checks с зависимостями** - `/health` эндпоинт расширен
+  - Проверяет MongoDB (timeout 1s)
+  - Проверяет Redis (timeout 500ms)
+  - Возвращает HTTP 503 при недоступности зависимостей
+  - Код: `backend/rust-api/src/handlers/mod.rs`
+
+### Выполнено (P1 - для production)
+- ✅ **Мониторинг инфраструктура** - стек развернут с профилем `monitoring`
+  - Prometheus (порт 9090) - собирает метрики
+  - Jaeger (порт 16686) - готов для трейсинга
+  - MongoDB Exporter (порт 9216) - экспортирует метрики
+  - Redis Exporter (порт 9121) - экспортирует метрики
+  - Grafana (порт 3000) - дашборды можно настроить
+  - Конфиги: `infra/prometheus/`, `infra/grafana/`
+
+### В работе / TODO
+- ⏳ **Prometheus метрики в Rust API** - нужно добавить `/metrics` endpoint с prometheus crate
+- ⏳ **Grafana дашборды** - создать JSON дашборды для API/MongoDB/Redis
+- ❌ **Backup/restore тестирование** - не выполнено
+- ❌ **Нагрузочное тестирование** - k6 сценарии есть, нужна валидация SLA
+- ❌ **JWT ротация** - скрипт не создан
+- ❌ **MongoDB Field Level Encryption** - не настроено
+- ❌ **TLS** - не включен (только для dev)
+- ❌ **Alerting** - не настроен
+- ❌ **Runbooks** - не созданы
+
 ## Контекст
 После выполнения задач A0, A1 и A2 проведена проверка соответствия реализации требованиям. Выявлено несколько технических долгов и областей для улучшения, критичных для production deployment. Данная задача устраняет эти недоработки и обеспечивает полную готовность инфраструктуры к развертыванию в staging/production окружениях.
 
@@ -23,81 +57,91 @@
 
 ## Состав работ
 
-### 1. MongoDB Replica Set для dev окружения
-- Обновить `docker-compose.yml`: создать 3 MongoDB ноды (primary + 2 secondary) с общим keyfile.
-- Автоматизировать инициализацию replica set через `rs.initiate()` в `infra/mongo-init/03_replica_set.js`.
-- Обновить `MONGODB_URI` в `.env.example` для подключения к replica set (`?replicaSet=rs0`).
-- Протестировать Change Stream Bridge:
-  - Запустить `infra/scripts/changestream_bridge.py` локально.
-  - Создать тестовый template в MongoDB, проверить публикацию события в Redis Stream `content:changes`.
-  - Обновить `docs/mongodb-replica-set.md` с инструкциями по настройке и troubleshooting.
+### 1. MongoDB Replica Set для dev окружения ✅ ВЫПОЛНЕНО
+- ✅ Обновить `docker-compose.yml`: создать 3 MongoDB ноды (primary + 2 secondary) с общим keyfile.
+  - Реализовано с keyfile внутри контейнера (Windows-совместимо)
+  - Порты: 27017 (primary), 27018 (secondary1), 27019 (secondary2)
+- ✅ Автоматизировать инициализацию replica set через `rs.initiate()` в `infra/mongo-init/03_replica_set.js`.
+  - Скрипт создан, запускается через `docker-compose --profile init run mongodb-init`
+  - Проверяет статус, выбирает PRIMARY, ждет завершения
+- ✅ Обновить `MONGODB_URI` в `.env.example` для подключения к replica set (`?replicaSet=rs0`).
+  - URI: `mongodb://admin:changeme@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0`
+- ✅ Протестировать Change Stream Bridge:
+  - ✅ Change Streams работают (протестировано через mongosh)
+  - ⚠️ `changestream_bridge.py` работает, но требует запуска внутри Docker network (из хоста не резолвятся имена контейнеров)
+  - ❌ `docs/mongodb-replica-set.md` не создан
 
-### 2. Тестирование Backup/Restore
-- Создать тестовый датасет (seed data):
+### 2. Тестирование Backup/Restore ❌ НЕ ВЫПОЛНЕНО
+- ❌ Создать тестовый датасет (seed data):
   - 100 users, 10 groups, 50 templates, 1000 tasks, 500 attempts.
   - 3 Qdrant коллекции с векторами (по 100 точек каждая).
   - Redis ключи: 50 sessions, 20 hints_used, 10 anticheat counters.
-- Выполнить полный backup через `infra/scripts/backup.sh`:
+- ❌ Выполнить полный backup через `infra/scripts/backup.sh`:
   - Проверить создание архивов в `/tmp/backups_*`.
   - Проверить upload в Yandex Object Storage (mock или реальный S3).
-- Выполнить restore через `infra/scripts/restore.sh`:
+- ❌ Выполнить restore через `infra/scripts/restore.sh`:
   - Очистить локальные БД (`docker-compose down -v`).
   - Восстановить из backup.
   - Проверить консистентность данных (count коллекций, checksum).
   - Измерить время восстановления (должно быть ≤15 минут).
-- Задокументировать результаты в `docs/backup-testing.md`.
+- ❌ Задокументировать результаты в `docs/backup-testing.md`.
+**Примечание**: Скрипты backup.sh и restore.sh существуют в `infra/scripts/`, но не протестированы.
 
-### 3. Нагрузочное тестирование Rust API
-- Создать k6/vegeta сценарии в `tests/load/`:
-  - **Scenario 1**: 500 rps на `POST /sessions/{id}/answers` (5 минут sustained).
-  - **Scenario 2**: 50 rps на `POST /sessions/{id}/hints` (3 минуты).
-  - **Scenario 3**: 10 параллельных SSE потоков `GET /sessions/{id}/stream`.
-  - **Scenario 4**: Mixed workload (70% answers, 20% sessions, 10% hints).
-- Запустить в локальном Docker окружении с realistic delays (MongoDB 5ms, Redis 1ms).
-- Собрать метрики:
+### 3. Нагрузочное тестирование Rust API ⏳ ЧАСТИЧНО ВЫПОЛНЕНО
+- ✅ Создать k6/vegeta сценарии в `tests/load/`:
+  - ✅ **Scenario 1**: 500 rps на `POST /sessions/{id}/answers` (5 минут sustained) - существует `tests/performance/answers.js`
+  - ✅ **Scenario 2**: 50 rps на `POST /sessions/{id}/hints` (3 минуты) - существует `tests/performance/hints.js`
+  - ✅ **Scenario 3**: 10 параллельных SSE потоков `GET /sessions/{id}/stream` - существует `tests/performance/sse.js`
+  - ❌ **Scenario 4**: Mixed workload (70% answers, 20% sessions, 10% hints) - не создан
+- ⏳ Запустить в локальном Docker окружении с realistic delays (MongoDB 5ms, Redis 1ms).
+  - Ранее запускались тесты, результаты в `tests/performance/results_*.json`
+  - Нужно повторить с новым replica set
+- ⏳ Собрать метрики:
   - p50, p95, p99 latency для каждого эндпоинта.
   - Throughput (rps).
   - Error rate (должен быть <0.1%).
-- Проверить SLA: p95 ≤200 мс для `POST /answers` (требование A2).
-- Создать отчёт `docs/load-testing.md` с графиками и выводами.
+- ❌ Проверить SLA: p95 ≤200 мс для `POST /answers` (требование A2) - нужна валидация.
+- ❌ Создать отчёт `docs/load-testing.md` с графиками и выводами.
 
-### 4. Безопасность: JWT ротация и секреты
-- Создать скрипт `infra/scripts/rotate_jwt_secret.sh`:
+### 4. Безопасность: JWT ротация и секреты ❌ НЕ ВЫПОЛНЕНО
+- ❌ Создать скрипт `infra/scripts/rotate_jwt_secret.sh`:
   - Генерация нового RSA ключа (2048 бит).
   - Обновление `JWT_SECRET` в `.env` и restart сервисов.
   - Graceful migration: поддержка 2 ключей (старый + новый) на 24 часа.
-- Интегрировать с Hashicorp Vault (опционально) или Yandex Lockbox:
+- ❌ Интегрировать с Hashicorp Vault (опционально) или Yandex Lockbox:
   - Хранение секретов (JWT_SECRET, REDIS_PASSWORD, QDRANT_API_KEY).
   - Автоматическая ротация раз в 90 дней.
-- Обновить `backend/rust-api/src/config.rs` для чтения секретов из Vault.
-- Задокументировать процесс в `docs/security/jwt-rotation.md`.
+- ❌ Обновить `backend/rust-api/src/config.rs` для чтения секретов из Vault.
+- ❌ Задокументировать процесс в `docs/security/jwt-rotation.md`.
+**Примечание**: Существует `infra/scripts/generate_secrets.sh` для генерации паролей, но не для ротации.
 
-### 5. MongoDB Field Level Encryption
-- Настроить Client-Side Field Level Encryption для коллекции `users`:
+### 5. MongoDB Field Level Encryption ❌ НЕ ВЫПОЛНЕНО
+- ❌ Настроить Client-Side Field Level Encryption для коллекции `users`:
   - Поля `email`, `sso_id` должны шифроваться с помощью AES-256.
   - Ключ шифрования хранится в Yandex KMS (Key Management Service).
-- Обновить `infra/mongo-init/01_init_db.js`:
+- ❌ Обновить `infra/mongo-init/01_init_db.js`:
   - Добавить schema с `encrypt` для PII полей.
   - Протестировать, что данные не читаемы без ключа.
-- Создать инструкцию `docs/security/field-level-encryption.md`.
+- ❌ Создать инструкцию `docs/security/field-level-encryption.md`.
 
-### 6. TLS для всех соединений
-- **MongoDB**:
+### 6. TLS для всех соединений ❌ НЕ ВЫПОЛНЕНО
+- ❌ **MongoDB**:
   - Сгенерировать самоподписанный сертификат для dev (`infra/certs/mongodb.pem`).
   - Обновить `docker-compose.yml`: добавить `--tlsMode requireTLS`.
   - Обновить `MONGODB_URI`: `?tls=true&tlsCAFile=/certs/ca.pem`.
-- **Redis**:
+- ❌ **Redis**:
   - Настроить `redis.conf` с `tls-port 6380` и сертификатами.
   - Обновить Rust API Redis client для TLS соединений.
-- **Qdrant**:
+- ❌ **Qdrant**:
   - Настроить HTTPS для API через Nginx reverse proxy.
   - Обновить `QDRANT_URL=https://localhost:6333`.
-- Для production: использовать Let's Encrypt / Yandex Certificate Manager.
-- Задокументировать в `docs/security/tls-setup.md`.
+- ❌ Для production: использовать Let's Encrypt / Yandex Certificate Manager.
+- ❌ Задокументировать в `docs/security/tls-setup.md`.
+**Примечание**: Для dev окружения TLS не критично, для production обязательно.
 
-### 7. Мониторинг и Observability
+### 7. Мониторинг и Observability ⏳ ЧАСТИЧНО ВЫПОЛНЕНО
 
-#### 7.1. Развертывание стека мониторинга
+#### 7.1. Развертывание стека мониторинга ✅ ВЫПОЛНЕНО
 
 **Обновить `docker-compose.yml` (добавить profile `monitoring`):**
 
@@ -225,7 +269,7 @@ scrape_configs:
       - targets: ['localhost:9090']
 ```
 
-#### 7.2. Настройка метрик в Rust API
+#### 7.2. Настройка метрик в Rust API ❌ НЕ ВЫПОЛНЕНО
 
 **Добавить зависимость в `backend/rust-api/Cargo.toml`:**
 
@@ -353,7 +397,8 @@ let app = Router::new()
     .route("/metrics", get(metrics::metrics_handler));
 ```
 
-#### 7.3. Настройка OpenTelemetry для Jaeger
+#### 7.3. Настройка OpenTelemetry для Jaeger ⏳ ЧАСТИЧНО ВЫПОЛНЕНО
+**Примечание**: Jaeger запущен (docker-compose), OpenTelemetry уже настроен в коде, нужно добавить spans в бизнес-логику.
 
 **Обновить `backend/rust-api/src/main.rs` (уже частично настроено):**
 
@@ -577,9 +622,9 @@ docker-compose --profile monitoring ps
 - Примеры типичных проблем (N+1 queries, медленный Redis)
 - Integration с логами (correlation ID)
 
-### 8. Alerting через Alertmanager
-- Развернуть Alertmanager в `docker-compose.yml`.
-- Создать правила алертинга (`infra/prometheus/alerts.yml`):
+### 8. Alerting через Alertmanager ❌ НЕ ВЫПОЛНЕНО
+- ❌ Развернуть Alertmanager в `docker-compose.yml`.
+- ❌ Создать правила алертинга (`infra/prometheus/alerts.yml`):
   - **Critical**: API p95 latency >500 мс (5 минут sustained).
   - **Critical**: Error rate >1% (3 минуты sustained).
   - **Warning**: Redis memory >80% capacity.
@@ -589,19 +634,20 @@ docker-compose --profile monitoring ps
 - Интегрировать с Telegram/Slack/Email для уведомлений.
 - Создать runbook `docs/runbooks/incident-response.md`.
 
-### 9. Health Checks с зависимостями
-- Обновить `GET /health` в Rust API:
-  - Проверка MongoDB: `db.runCommand("ping")` с timeout 1s.
-  - Проверка Redis: `PING` с timeout 500ms.
-  - Проверка Qdrant: `GET /collections` с timeout 1s (опционально, если Python API запущен).
-  - Возвращать:
+### 9. Health Checks с зависимостями ✅ ВЫПОЛНЕНО
+- ✅ Обновить `GET /health` в Rust API:
+  - ✅ Проверка MongoDB: `db.runCommand("ping")` с timeout 1s.
+  - ✅ Проверка Redis: `PING` с timeout 500ms.
+  - ❌ Проверка Qdrant: не добавлена (можно добавить позже)
+  - ✅ Возвращать:
     - `200 OK` — все зависимости доступны.
-    - `503 Service Unavailable` — хотя бы одна зависимость недоступна (с деталями).
-- Добавить `GET /ready` для Kubernetes readiness probe.
-- Задокументировать формат ответа в `docs/api/health.yaml`.
+    - `503 Service Unavailable` — хотя бы одна зависимость недоступна (с деталями в JSON).
+  - Код: `backend/rust-api/src/handlers/mod.rs`
+- ❌ Добавить `GET /ready` для Kubernetes readiness probe - не добавлен.
+- ❌ Задокументировать формат ответа в `docs/api/health.yaml` - не создано.
 
-### 10. Troubleshooting Runbooks
-- Создать серию runbook'ов в `docs/runbooks/`:
+### 10. Troubleshooting Runbooks ❌ НЕ ВЫПОЛНЕНО
+- ❌ Создать серию runbook'ов в `docs/runbooks/`:
   - **Redis OOM**: действия при исчерпании памяти (eviction policy, увеличение RAM).
   - **MongoDB Replica Set Failover**: процедура восстановления primary ноды.
   - **Qdrant Index Corruption**: rebuild индекса из snapshot.
@@ -642,23 +688,28 @@ docker-compose --profile monitoring ps
 - `docs/backup-testing.md`, `docs/load-testing.md`.
 - Обновлённый `docs/dev-setup.md` с инструкциями для replica set.
 
-## Чек-лист готовности
+## Чек-лист готовности (22.12.2024)
 
-### Критичные
-- [ ] MongoDB replica set работает в dev окружении, Change Stream Bridge протестирован.
-- [ ] Backup/restore проверен на тестовом датасете, время восстановления ≤15 минут.
-- [ ] Нагрузочное тестирование выполнено, SLA ≤200 мс p95 подтверждён при 500 rps.
+### Критичные (P0)
+- [x] **MongoDB replica set работает в dev окружении** ✅
+  - 3 ноды: PRIMARY + 2 SECONDARY
+  - Change Streams функционируют (протестировано через mongosh)
+  - ⚠️ Change Stream Bridge требует запуска внутри Docker network
+- [ ] **Backup/restore проверен** ❌ - скрипты есть, но не протестированы
+- [ ] **Нагрузочное тестирование выполнено** ⏳ - k6 сценарии есть, нужна валидация SLA
 
-### Важные
-- [ ] JWT ротация автоматизирована, секреты хранятся в Vault/KMS.
-- [ ] MongoDB Field Level Encryption настроено для PII полей (email, sso_id).
-- [ ] TLS включен для всех соединений (MongoDB, Redis, Qdrant).
-- [ ] Jaeger/Grafana развёрнуты, дашборды созданы, метрики собираются.
+### Важные (P1)
+- [ ] **JWT ротация** ❌ - скрипт не создан
+- [ ] **MongoDB Field Level Encryption** ❌ - не настроено
+- [ ] **TLS** ❌ - не включен (только для dev)
+- [x] **Jaeger/Grafana развёрнуты** ✅ - запущены с профилем `monitoring`
+  - ⏳ Дашборды: конфиги созданы, JSON дашборды не созданы
+  - ⏳ Метрики: exporters работают, /metrics в Rust API не добавлен
 
-### Желательные
-- [ ] Alertmanager настроен, алерты отправляются в Telegram/Slack.
-- [ ] Health checks проверяют зависимости (MongoDB, Redis).
-- [ ] Runbooks созданы для 5+ типичных проблем.
+### Желательные (P2)
+- [ ] **Alertmanager** ❌ - не настроен
+- [x] **Health checks проверяют зависимости** ✅ - MongoDB/Redis проверяются
+- [ ] **Runbooks** ❌ - не созданы
 
 ## Тестирование
 
