feat: Prometheus метрики и /metrics endpoint для Rust AP

--- a/tasks/TD-01.md
+++ b/tasks/TD-01.md
@@ -23,8 +23,16 @@
   - Grafana (порт 3000) - дашборды можно настроить
   - Конфиги: `infra/prometheus/`, `infra/grafana/`
 
+### Выполнено (P1 - для production) - метрики
+- ✅ **Prometheus метрики в Rust API** - добавлен `/metrics` endpoint с prometheus crate
+  - Добавлены зависимости: prometheus 0.14, lazy_static 1.4
+  - Создан модуль `src/metrics.rs` с 13 типами метрик (HTTP, DB, Cache, Business)
+  - Реализован middleware для автоматического сбора HTTP метрик
+  - Эндпоинт `/metrics` возвращает метрики в формате Prometheus
+  - Сервисы проинструментированы: session_service, answer_service
+  - Prometheus активно скрапит метрики (таргет rust-api:8081 UP)
+
 ### В работе / TODO
-- ⏳ **Prometheus метрики в Rust API** - нужно добавить `/metrics` endpoint с prometheus crate
 - ⏳ **Grafana дашборды** - создать JSON дашборды для API/MongoDB/Redis
 - ❌ **Backup/restore тестирование** - не выполнено
 - ❌ **Нагрузочное тестирование** - k6 сценарии есть, нужна валидация SLA
@@ -269,14 +277,27 @@ scrape_configs:
       - targets: ['localhost:9090']
 ```
 
-#### 7.2. Настройка метрик в Rust API ❌ НЕ ВЫПОЛНЕНО
+#### 7.2. Настройка метрик в Rust API ✅ ВЫПОЛНЕНО
 
-**Добавить зависимость в `backend/rust-api/Cargo.toml`:**
+**Реализация (22.12.2024):**
+- Добавлены зависимости в `backend/rust-api/Cargo.toml`: prometheus 0.14, lazy_static 1.4
+- Создан модуль `src/metrics.rs` с 13 типами метрик:
+  - HTTP_REQUESTS_TOTAL, HTTP_REQUEST_DURATION_SECONDS (latency buckets)
+  - DB_OPERATIONS_TOTAL, DB_OPERATION_DURATION_SECONDS (MongoDB)
+  - CACHE_OPERATIONS_TOTAL, CACHE_HIT_RATIO, CACHE_OPERATION_DURATION_SECONDS (Redis)
+  - SESSIONS_TOTAL, SESSIONS_ACTIVE, ANSWERS_SUBMITTED_TOTAL, HINTS_REQUESTED_TOTAL (Business)
+  - SSE_CONNECTIONS_ACTIVE, ANTICHEAT_VIOLATIONS_TOTAL
+- Создан middleware `src/middlewares/metrics.rs` для автоматического сбора HTTP метрик с нормализацией путей
+- Добавлен эндпоинт `GET /metrics` в `src/handlers/mod.rs`
+- Проинструментированы сервисы: session_service.rs, answer_service.rs
+- Prometheus успешно скрапит метрики с rust-api:8081 (таргет UP)
+
+**Добавленные зависимости в `backend/rust-api/Cargo.toml`:**
 
 ```toml
 [dependencies]
 # Metrics
-prometheus = "0.13"
+prometheus = "0.14"
 lazy_static = "1.4"
 ```
 
@@ -704,7 +725,7 @@ docker-compose --profile monitoring ps
 - [ ] **TLS** ❌ - не включен (только для dev)
 - [x] **Jaeger/Grafana развёрнуты** ✅ - запущены с профилем `monitoring`
   - ⏳ Дашборды: конфиги созданы, JSON дашборды не созданы
-  - ⏳ Метрики: exporters работают, /metrics в Rust API не добавлен
+  - ✅ Метрики: exporters работают, /metrics в Rust API добавлен и работает
 
 ### Желательные (P2)
 - [ ] **Alertmanager** ❌ - не настроен
