--- a/tasks/A3.md
+++ b/tasks/A3.md
@@ -34,12 +34,12 @@
 - Мониторинг и алерты для SLA подсказок и очередей.
 
 ## Чек-лист готовности
-- [ ] Эндпоинт `/explanations` соответствует контракту, имеет кэш и fallback на шаблоны.
-- [ ] Qdrant коллекции актуализируются через worker, а устаревшие версии помечаются `deprecated`.
-- [ ] Очередь `content:changes` не растёт бесконтрольно, алерты настроены на >100 элементов.
-- [ ] Поддерживаются промпты на русском языке с учетом морфологии (pymorphy2/natasha) и контекст ошибок.
-- [ ] Метрики и логи интегрированы в общий стек мониторинга, есть дашборд SLA подсказок.
-- [ ] Документация описывает RAG, форматы запросов и процессы восстановления.
+- [x] Эндпоинт `/explanations` соответствует контракту, имеет кэш и fallback на шаблоны.
+- [x] Qdrant коллекции актуализируются через worker, а устаревшие версии помечаются `deprecated`.
+- [x] Очередь `content:changes` не растёт бесконтрольно, алерты настроены на >100 элементов.
+- [x] Поддерживаются промпты на русском языке с учетом морфологии (pymorphy2/natasha) и контекст ошибок.
+- [x] Метрики и логи интегрированы в общий стек мониторинга, есть дашборд SLA подсказок.
+- [x] Документация описывает RAG, форматы запросов и процессы восстановления.
 
 ## Тестирование
 - **Unit:** `pytest`/`mypy`/`ruff` для логики извлечения правил, генерации промптов, fallback.
