--- a/tasks/A4.md
+++ b/tasks/A4.md
@@ -1,4 +1,4 @@
-# A4 — Ученический PWA: уроки, таймеры, офлайн
+﻿# A4 — Ученический PWA: уроки, таймеры, офлайн
 
 ## Контекст
 Документы `requirements/сценарии/требования.md` (разделы 4.2 и 4.4), `архитектура/описание BL.md` (Сценарий 1–2) и `структураПО/стек проекта.md` описывают интерфейс ученика: PWA с Web Components, таймером, подсказками, офлайн-режимом и античит-механиками. Задача — реализовать фронтенд, который покрывает эти сценарии и укладывается в UX/доступность (WCAG 2.1 AA).
@@ -37,12 +37,12 @@
 - Набор тестов (unit/e2e) и Lighthouse/a11y отчёты.
 
 ## Чек-лист готовности
-- [ ] Lesson Player, подсказки, таймеры и статистика реализованы и взаимодействуют с Rust API.
-- [ ] Профили адаптивности (XL→XXS, VH) и требования доступности выполнены (axe/Lighthouse ≥ 90).
-- [ ] Офлайн режим сохраняет ответы, синхронизирует их после reconnect и уведомляет пользователя о статусе.
-- [ ] Сервис-воркер подписан, выполняет безопасное обновление (skipWaiting + уведомление).
-- [ ] Поведенческая аналитика и античит события отправляются в API и могут быть отключены фич-флагом.
-- [ ] Документация описывает сценарии использования, hotkeys и edge cases (таймауты, подсказки, блокировки).
+- [x] Lesson Player, подсказки, таймеры и статистика реализованы и взаимодействуют с Rust API.
+- [x] Профили адаптивности (XL→XXS, VH) и требования доступности выполнены (axe/Lighthouse ≥ 90).
+- [x] Офлайн режим сохраняет ответы, синхронизирует их после reconnect и уведомляет пользователя о статусе.
+- [x] Сервис-воркер подписан, выполняет безопасное обновление (skipWaiting + уведомление).
+- [x] Поведенческая аналитика и античит события отправляются в API и могут быть отключены фич-флагом.
+- [x] Документация описывает сценарии использования, hotkeys и edge cases (таймауты, подсказки, блокировки).
 
 ## Тестирование
 - **Unit/Snapshot:** Vitest + @web/test-runner для компонентов (таймер, подсказки, scoreboard, offline manager).
