--- a/tasks/done/TD-04.md
+++ b/tasks/done/TD-04.md
@@ -201,15 +201,15 @@ npx storybook@latest init --type lit
 
 ## Критерии приемки
 
-- [ ] aria-live регионы для scoreboard добавлены
-- [ ] Hotkeys (H, S, Esc) реализованы с feature flag
-- [ ] Контрастность цветов проверена и исправлена (WCAG 2.1 AA)
-- [ ] E2E тесты покрывают: lesson flow, hints, offline, timer, conflicts
-- [ ] A11y тесты (axe) запускаются без critical/serious ошибок
-- [ ] Lighthouse PWA/Accessibility/Best Practices >= 90, Performance >= 80
-- [ ] Unit-тесты для компонентов (hint-panel, score-board, connection-indicator, conflict-resolver)
-- [ ] Storybook доступен на `npm run storybook` (опционально)
-- [ ] Документация описывает offline sync, PWA deployment
+- [x] aria-live регионы для scoreboard добавлены
+- [x] Hotkeys (H, S, Esc) реализованы с feature flag
+- [x] Контрастность цветов проверена и исправлена (WCAG 2.1 AA)
+- [x] E2E тесты покрывают: lesson flow, hints, offline, timer, conflicts
+- [x] A11y тесты (axe) запускаются без critical/serious ошибок
+- [x] Lighthouse PWA/Accessibility/Best Practices >= 90, Performance >= 80
+- [x] Unit-тесты для компонентов (hint-panel, score-board, connection-indicator, conflict-resolver)
+- [x] Storybook доступен на `npm run storybook` (опционально)
+- [x] Документация описывает offline sync, PWA deployment
 
 ## Приоритеты (обновлено)
 
