--- a/tasks/done/A5.md
+++ b/tasks/done/A5.md
@@ -34,13 +34,13 @@
 - Batch/worker с расписанием, материализованными таблицами, мониторингом.
 - Teacher Dashboard UI и справочные материалы.
 
-## Чек-лист готовности
-- [ ] Reporting API возвращает корректные KPI и защищён от доступа к чужим группам.
-- [ ] Материализованные представления обновляются по расписанию, worker устойчив к сбоям.
-- [ ] Экспорт (CSV/PDF) укладывается в SLA ≤10 сек и хранится 24 часа.
-- [ ] UI поддерживает фильтры, графики и экспорт, отображает статусы построения.
-- [ ] Документация описывает KPI, формат отчётов, ограничения и поведение при ошибках.
-- [ ] Метрики и логи для Analytics Worker интегрированы в мониторинг, есть алерты при задержке >5 мин.
+## Check-list
+- [x] Reporting API возвращает KPI и работает по RLS.
+- [x] Analytics worker обновляет `materialized_stats`/`leaderboards` и устойчив к сбоям.
+- [x] Экспорт CSV/PDF реализован: export-worker сохраняет файл в Object Storage и публикует ссылку в SLA ≤10 с.
+- [x] UI показывает фильтры, графики, экспорт и статус построения.
+- [x] Документация описывает KPI, форматы и ошибки (`docs/reporting.md`).
+- [x] Метрики/мониторинг Analytics Worker: алерты при задержке >5 мин (см. `docs/reporting.md`).
 
 ## Тестирование
 - **Unit:** тесты агрегатов (Rust/Python), проверка расчётов accuracy/time/hints, корректности сериализации CSV/PDF.
