--- a/tasks/done/A6.md
+++ b/tasks/done/A6.md
@@ -36,12 +36,12 @@
 - Документация и чек-листы методистов.
 
 ## Чек-лист готовности
-- [ ] Все операции над шаблонами/правилами доступны только авторизованным администраторам и логируются.
-- [ ] Workflow статусов и привязка к Embedding Pipeline работают, очередь видна в UI.
-- [ ] Проверки качества (lint, уникальность, отсутствие PII) выполняются перед публикацией.
-- [ ] Feature flags можно включать/выключать и связывать с группами/пользователями.
-- [ ] Админка предоставляет возможность откатить шаблон в `draft` и объясняет причины.
-- [ ] Документация описывает процесс модерации и восстановление в случае сбоя Pipeline.
+- [x] Все операции над шаблонами/правилами доступны только авторизованным администраторам и логируются.
+- [x] Workflow статусов и привязка к Embedding Pipeline работают, очередь видна в UI.
+- [x] Проверки качества (lint, уникальность, отсутствие PII) выполняются перед публикацией.
+- [x] Feature flags можно включать/выключивать и связывать с группами/пользователями.
+- [x] Админка предоставляет возможность откатить шаблон в `draft` и объясняет причины.
+-- [x] Документация описывает процесс модерации и восстановление в случае сбоя Pipeline.
 
 ## Тестирование
 - **Unit:** тесты Admin API (валидация, workflow, RBAC), проверки редактора (lint контента).
